# promptkeep

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml  testing.py
src/prompt_manager/: __init__.py  config.py  decorator.py  history.py  prompts.py  rendering.py  storage.py  tracking.py
src/prompt_manager/integrations/: __init__.py  openai_wrapper.py
src/promptkeep/: __init__.py  config.py  decorator.py  history.py  prompts.py  rendering.py  storage.py  tracking.py
src/promptkeep/integrations/: __init__.py  openai_wrapper.py
tests/: conftest.py  fakes.py  test_decorator.py  test_history.py  test_openai_wrapper.py  test_prompt.py  test_rendering.py  test_storage.py
