[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-manager"
version = "0.1.0"
description = "Prompt management: versioned prompt templates, lineage tracking in SQLite, and OpenAI run tracking."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "peewee>=3.17",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
