[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptkeep"
version = "0.2.0"
description = "Prompts as first-class objects: versioned templates, SQLite lineage tracking, and OpenAI run tracking."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Pranav", email = "pranav2278@gmail.com" }]
keywords = ["prompt", "prompts", "llm", "openai", "prompt-engineering", "versioning", "tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "peewee>=3.17",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/promptkeep"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
